added about us section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rockerz Website</title>
+    <!-- Font Awesome CSN Link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Google Fonts CDN Link-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -44,9 +52,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#"
-                    >Home</a
-                  >
+                  <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">About Us</a>
@@ -69,26 +75,77 @@
         </nav>
 
         <div class="container">
-        <div class="content-home">
+          <div class="content-home">
             <div class="row content-home2">
-                <div class="col-lg-7 col-md-5">
-                    <div class="box-container">
-                        <img src="./assets/headphone-img.png" class="img-home" alt="headphone banner image">
-                    </div>
+              <div class="col-lg-7 col-md-5">
+                <div class="box-container">
+                  <img
+                    src="./assets/headphone-img.png"
+                    class="img-home"
+                    alt="headphone banner image"
+                  />
                 </div>
-                <div class="col-lg-5 col-md-7">
-                    <div class="box-container2">
-                        <h1 class="home-heading">Crafted for the <span class="home-span">Ultimate Sound Journey</span></h1>
-                        <p class="para-home">Crafted with precision, our headphones offer unparalleled sound fidelity and comfort. Whether you're on the move or relaxing at home, immerse yourself in music the way it was meant to be heard.</p>
-                        <div class="btn-home">
-                            <a href="#" class="home-links">Buy Now</a>
-                            <a href="#" class="home-links btn-2">Explore</a>
-                        </div>
-                        
-                    </div>
+              </div>
+              <div class="col-lg-5 col-md-7">
+                <div class="box-container2">
+                  <h1 class="home-heading">
+                    Crafted for the
+                    <span class="home-span">Ultimate Sound Journey</span>
+                  </h1>
+                  <p class="para-home">
+                    Crafted with precision, our headphones offer unparalleled
+                    sound fidelity and comfort. Whether you're on the move or
+                    relaxing at home, immerse yourself in music the way it was
+                    meant to be heard.
+                  </p>
+                  <div class="btn-home">
+                    <a href="#" class="home-links">Buy Now</a>
+                    <a href="#" class="home-links btn-2">Explore</a>
+                  </div>
                 </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
+    </div>
+
+    <!-- about section -->
+    <div class="container">
+      <div class="about-us-container">
+        <div class="about-us">
+          <div class="row">
+            <div class="col-lg-6">
+              <div class="content-about">
+                <h2 class="heading-about">About Us</h2>
+                <p class="para-about">
+                  At Rockerz, we're dedicated to delivering an audio experience
+                  that elevates every beat. Our mission is to combine
+                  cutting-edge technology with sleek design, creating headphones
+                  that bring your music to life.
+                </p>
+                <p class="para-about">
+                  We believe in the power of music to inspire and connect.
+                  That's why we craft headphones and earphones with precision,
+                  comfort, and exceptional sound quality, ensuring every note is
+                  heard just as it was meant to be.
+                </p>
+                <a href="#" class="link-about"
+                  ><span class="span-about"></span>Read More<span
+                    class="icon-arow"
+                  >
+                    <i class="fa-solid fa-arrow-right"></i></span
+                ></a>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <img
+                src="./assets/earphone.png"
+                class="img-about"
+                alt="earphone image"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </div>
