--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rockerz Website</title>
-    <!-- Font Awesome CSN Link -->
+    <!-- Font Awesome CDN Link -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -150,6 +150,180 @@
       </div>
     </div>
 
+    <!-- products section -->
+    <section class="product-category">
+      <h2 class="heading-product">Product Category</h2>
+      <div class="container-fluid">
+        <!-- carousel -->
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-4 col-md-6">
+                    <!-- cards -->
+                    <div class="card card-product">
+                      <img
+                        src="./assets/earphone1.png"
+                        class="card-img-top img-card"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">EARPHONE DX300</h5>
+                        <p class="card-text">
+                          The Earphone DX300 is designed for those who demand
+                          the highest audio fidelity in a compact form. With its
+                          premium build and advanced drivers, the DX300 delivers
+                          a rich, immersive listening experience, capturing
+                          every nuance and detail of your favorite tracks.
+                        </p>
+                        <a href="#" class="btn-product-ctg"
+                          >Read More<span class="icon-arow">
+                            <i class="fa-solid fa-arrow-right"></i></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <!-- cards -->
+                    <div class="card card-product">
+                      <img
+                        src="./assets/headphone1.png"
+                        class="card-img-top img-card"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">HEADHONE AUDEZE MM-100</h5>
+                        <p class="card-text">
+                          The Audeze MM-100 headphones are a testament to
+                          superior sound engineering. Combining cutting-edge
+                          planar magnetic technology with a sleek design, these
+                          headphones offer a balanced, precise soundstage,
+                          making them perfect for audiophiles and professionals
+                          alike.
+                        </p>
+                        <a href="#" class="btn-product-ctg"
+                          >Read More<span class="icon-arow">
+                            <i class="fa-solid fa-arrow-right"></i></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <!-- cards -->
+                    <div class="card card-product">
+                      <img
+                        src="./assets/headphone2.png"
+                        class="card-img-top img-card"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">HEADHONE AUDEZE AZURYS</h5>
+                        <p class="card-text">
+                          Elevate your audio experience with the Audeze Azurys
+                          headphones. Built for comfort and performance, the
+                          Azurys features a robust design paired with
+                          crystal-clear sound quality, ensuring long hours of
+                          enjoyable listening without compromise.
+                        </p>
+                        <a href="#" class="btn-product-ctg"
+                          >Read More<span class="icon-arow">
+                            <i class="fa-solid fa-arrow-right"></i></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                <div class="row">
+                  <div class="col-lg-4 col-md-6">
+                    <!-- cards -->
+                    <div class="card card-product">
+                      <img
+                        src="./assets/earphone3.png"
+                        class="card-img-top img-card"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">EARPHONE ZX500</h5>
+                        <p class="card-text">
+                          Step into a world of pure sound with the Earphone ZX500. Designed for those who appreciate both aesthetics and audio excellence, these earphones offer crisp highs and deep, resonant bass in a compact, stylish design. Whether you're commuting or working out, the ZX500 provides the perfect blend of comfort and performance.
+                        </p>
+                        <a href="#" class="btn-product-ctg"
+                          >Read More<span class="icon-arow">
+                            <i class="fa-solid fa-arrow-right"></i></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <!-- cards -->
+                    <div class="card card-product">
+                      <img
+                        src="./assets/headphone3.png"
+                        class="card-img-top img-card"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">HEADPHONE ET PRO-X</h5>
+                        <p class="card-text">
+                         Elevate your listening experience with the ET Pro-X headphones. Featuring advanced acoustic engineering, these headphones deliver a wide soundstage with stunning clarity and depth. Crafted for the discerning listener, the Pro-X is perfect for immersive music sessions and professional audio work.
+                        </p>
+                        <a href="#" class="btn-product-ctg"
+                          >Read More<span class="icon-arow">
+                            <i class="fa-solid fa-arrow-right"></i></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-4 col-md-6">
+                    <!-- cards -->
+                    <div class="card card-product">
+                      <img
+                        src="./assets/headphone4.png"
+                        class="card-img-top img-card"
+                        alt="..."
+                      />
+                      <div class="card-body">
+                        <h5 class="card-title">HEADHONE ET ELITE</h5>
+                        <p class="card-text">
+                          Experience sound like never before with the ET Elite headphones. Built for comfort and long-lasting durability, the Elite offers a luxurious audio experience with its superior noise isolation and rich, balanced sound. Whether you're at home or in the studio, these headphones ensure every note is heard in its full glory.
+                        </p>
+                        <a href="#" class="btn-product-ctg"
+                          >Read More<span class="icon-arow">
+                            <i class="fa-solid fa-arrow-right"></i></span
+                        ></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
     <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
