added products section with custom carousel and products contents

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               </div>
             </div>
             <div class="carousel-item">
-                <div class="container">
+              <div class="container">
                 <div class="row">
                   <div class="col-lg-4 col-md-6">
                     <!-- cards -->
@@ -250,7 +250,13 @@
                       <div class="card-body">
                         <h5 class="card-title">EARPHONE ZX500</h5>
                         <p class="card-text">
-                          Step into a world of pure sound with the Earphone ZX500. Designed for those who appreciate both aesthetics and audio excellence, these earphones offer crisp highs and deep, resonant bass in a compact, stylish design. Whether you're commuting or working out, the ZX500 provides the perfect blend of comfort and performance.
+                          Step into a world of pure sound with the Earphone
+                          ZX500. Designed for those who appreciate both
+                          aesthetics and audio excellence, these earphones offer
+                          crisp highs and deep, resonant bass in a compact,
+                          stylish design. Whether you're commuting or working
+                          out, the ZX500 provides the perfect blend of comfort
+                          and performance.
                         </p>
                         <a href="#" class="btn-product-ctg"
                           >Read More<span class="icon-arow">
@@ -270,7 +276,12 @@
                       <div class="card-body">
                         <h5 class="card-title">HEADPHONE ET PRO-X</h5>
                         <p class="card-text">
-                         Elevate your listening experience with the ET Pro-X headphones. Featuring advanced acoustic engineering, these headphones deliver a wide soundstage with stunning clarity and depth. Crafted for the discerning listener, the Pro-X is perfect for immersive music sessions and professional audio work.
+                          Elevate your listening experience with the ET Pro-X
+                          headphones. Featuring advanced acoustic engineering,
+                          these headphones deliver a wide soundstage with
+                          stunning clarity and depth. Crafted for the discerning
+                          listener, the Pro-X is perfect for immersive music
+                          sessions and professional audio work.
                         </p>
                         <a href="#" class="btn-product-ctg"
                           >Read More<span class="icon-arow">
@@ -290,7 +301,13 @@
                       <div class="card-body">
                         <h5 class="card-title">HEADHONE ET ELITE</h5>
                         <p class="card-text">
-                          Experience sound like never before with the ET Elite headphones. Built for comfort and long-lasting durability, the Elite offers a luxurious audio experience with its superior noise isolation and rich, balanced sound. Whether you're at home or in the studio, these headphones ensure every note is heard in its full glory.
+                          Experience sound like never before with the ET Elite
+                          headphones. Built for comfort and long-lasting
+                          durability, the Elite offers a luxurious audio
+                          experience with its superior noise isolation and rich,
+                          balanced sound. Whether you're at home or in the
+                          studio, these headphones ensure every note is heard in
+                          its full glory.
                         </p>
                         <a href="#" class="btn-product-ctg"
                           >Read More<span class="icon-arow">
@@ -304,22 +321,24 @@
             </div>
           </div>
           <button
-            class="carousel-control-prev"
+            class="carousel-control-prev btn-prev"
             type="button"
             data-bs-target="#carouselExample"
             data-bs-slide="prev"
           >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+            <span
+              ><i class="fa-solid fa-arrow-left btn-scroll button-left"></i
+            ></span>
           </button>
           <button
-            class="carousel-control-next"
+            class="carousel-control-next btn-next"
             type="button"
             data-bs-target="#carouselExample"
             data-bs-slide="next"
           >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+            <span
+              ><i class="fa-solid fa-arrow-right btn-scroll button-right"></i
+            ></span>
           </button>
         </div>
       </div>
