added testimonial section of clients

--- a/index.html
+++ b/index.html
@@ -343,6 +343,142 @@
         </div>
       </div>
     </section>
+
+    <!-- testimonial section -->
+    <section class="testimonial">
+      <h2 class="heading-testimonial">Client Testimonials</h2>
+      <p class="para-testimonial">
+        Our Clients love us! Here's what they have to say about their experience with Rockerz.
+      </p>
+      <div class="container-fluid">
+        <!-- slider -->
+        <div class="container-fluid">
+          <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="carousel-indicators">
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="0"
+                class="active"
+                aria-current="true"
+                aria-label="Slide 1"
+              ></button>
+              <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="1"
+                aria-label="Slide 2"
+              ></button>
+              <!-- <button
+                type="button"
+                data-bs-target="#carouselExampleIndicators"
+                data-bs-slide-to="2"
+                aria-label="Slide 3"
+              ></button> -->
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="container container-clients">
+                  <div class="row">
+                    <div class="col-lg-6 col-md-12 my-2">
+                      <div class="container-content">
+                        <div class="img-client">
+                          <img class="image-client" src="./assets/testimonial_img1.png" alt="client 1">
+                        </div>
+
+                        <div class="icons-stars">
+                          <ul class="rating">
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                          </ul>
+                          <h3 class="client-name">Savita Kumar</h3>
+                          <p class="para-client">Rockerz headphones have completely transformed my listening experience. The sound quality is unbeatable!</p>
+                          <h5 class="profession">Music Producer</h5>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-12 my-2">
+                      <div class="container-content">
+                        <div class="img-client">
+                          <img class="image-client" src="./assets/testimonial_img2.png" alt="client 2">
+                        </div>
+
+                        <div class="icons-stars">
+                          <ul class="rating">
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                          </ul>
+                          <h3 class="client-name">Anuj Patel</h3>
+                          <p class="para-client">Exceptional customer service and top-notch products. Rockerz has earned a loyal customer in me!</p>
+                          <h5 class="profession">Photographerr</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="container container-clients">
+                  <div class="row">
+                    <div class="col-lg-6 col-md-12 my-2">
+                      <div class="container-content">
+                        <div class="img-client">
+                          <img class="image-client" src="./assets/testimonial_img3.png" alt="client 3">
+                        </div>
+
+                        <div class="icons-stars">
+                          <ul class="rating">
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                          </ul>
+                          <h3 class="client-name">Ranjeev Singh</h3>
+                          <p class="para-client">I love my Rockerz X7! The noise-cancelling feature is a game-changer for my daily commute.</p>
+                          <h5 class="profession">Software Developer</h5>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-lg-6 col-md-12 my-2">
+                      <div class="container-content">
+                        <div class="img-client">
+                          <img class="image-client" src="./assets/testimonial_img4.png" alt="client 4">
+                        </div>
+
+                        <div class="icons-stars">
+                          <ul class="rating">
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                          </ul>
+                          <h3 class="client-name">Shivani Das</h3>
+                          <p class="para-client">The best purchase I've made this year! Rockerz earphones are both comfortable and deliver superior sound quality.</p>
+                          <h5 class="profession">Web Designer</h5>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
