added contact us section

--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
     <section class="testimonial">
       <h2 class="heading-testimonial">Client Testimonials</h2>
       <p class="para-testimonial">
-        Our Clients love us! Here's what they have to say about their experience with Rockerz.
+        Our Clients love us! Here's what they have to say about their experience
+        with Rockerz.
       </p>
       <div class="container-fluid">
         <!-- slider -->
@@ -383,19 +384,37 @@
                     <div class="col-lg-6 col-md-12 my-2">
                       <div class="container-content">
                         <div class="img-client">
-                          <img class="image-client" src="./assets/testimonial_img1.png" alt="client 1">
+                          <img
+                            class="image-client"
+                            src="./assets/testimonial_img1.png"
+                            alt="client 1"
+                          />
                         </div>
 
                         <div class="icons-stars">
                           <ul class="rating">
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
                           </ul>
                           <h3 class="client-name">Savita Kumar</h3>
-                          <p class="para-client">Rockerz headphones have completely transformed my listening experience. The sound quality is unbeatable!</p>
+                          <p class="para-client">
+                            Rockerz headphones have completely transformed my
+                            listening experience. The sound quality is
+                            unbeatable!
+                          </p>
                           <h5 class="profession">Music Producer</h5>
                         </div>
                       </div>
@@ -404,25 +423,41 @@
                     <div class="col-lg-6 col-md-12 my-2">
                       <div class="container-content">
                         <div class="img-client">
-                          <img class="image-client" src="./assets/testimonial_img2.png" alt="client 2">
+                          <img
+                            class="image-client"
+                            src="./assets/testimonial_img2.png"
+                            alt="client 2"
+                          />
                         </div>
 
                         <div class="icons-stars">
                           <ul class="rating">
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
                           </ul>
                           <h3 class="client-name">Anuj Patel</h3>
-                          <p class="para-client">Exceptional customer service and top-notch products. Rockerz has earned a loyal customer in me!</p>
+                          <p class="para-client">
+                            Exceptional customer service and top-notch products.
+                            Rockerz has earned a loyal customer in me!
+                          </p>
                           <h5 class="profession">Photographerr</h5>
                         </div>
                       </div>
                     </div>
                   </div>
-
                 </div>
               </div>
               <div class="carousel-item">
@@ -431,19 +466,36 @@
                     <div class="col-lg-6 col-md-12 my-2">
                       <div class="container-content">
                         <div class="img-client">
-                          <img class="image-client" src="./assets/testimonial_img3.png" alt="client 3">
+                          <img
+                            class="image-client"
+                            src="./assets/testimonial_img3.png"
+                            alt="client 3"
+                          />
                         </div>
 
                         <div class="icons-stars">
                           <ul class="rating">
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
                           </ul>
                           <h3 class="client-name">Ranjeev Singh</h3>
-                          <p class="para-client">I love my Rockerz X7! The noise-cancelling feature is a game-changer for my daily commute.</p>
+                          <p class="para-client">
+                            I love my Rockerz X7! The noise-cancelling feature
+                            is a game-changer for my daily commute.
+                          </p>
                           <h5 class="profession">Software Developer</h5>
                         </div>
                       </div>
@@ -452,29 +504,113 @@
                     <div class="col-lg-6 col-md-12 my-2">
                       <div class="container-content">
                         <div class="img-client">
-                          <img class="image-client" src="./assets/testimonial_img4.png" alt="client 4">
+                          <img
+                            class="image-client"
+                            src="./assets/testimonial_img4.png"
+                            alt="client 4"
+                          />
                         </div>
 
                         <div class="icons-stars">
                           <ul class="rating">
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
-                            <li class="stars"><i class="fa-solid fa-star"></i></li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
+                            <li class="stars">
+                              <i class="fa-solid fa-star"></i>
+                            </li>
                           </ul>
                           <h3 class="client-name">Shivani Das</h3>
-                          <p class="para-client">The best purchase I've made this year! Rockerz earphones are both comfortable and deliver superior sound quality.</p>
+                          <p class="para-client">
+                            The best purchase I've made this year! Rockerz
+                            earphones are both comfortable and deliver superior
+                            sound quality.
+                          </p>
                           <h5 class="profession">Web Designer</h5>
                         </div>
                       </div>
                     </div>
                   </div>
-
                 </div>
               </div>
             </div>
-            
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact section [ too much logic thinking!] -->
+    <section class="contact-form">
+      <h3 class="heading-contact">Contact Us</h3>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-12">
+            <form class="form-origin">
+              <div class="row">
+                <div class="col-lg-6 col-md-12">
+                  <div class="mb-3">
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Full Name"
+                      id="exampleInputEmail1"
+                      aria-describedby="emailHelp"
+                    />
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                  <div class="mb-3">
+                    <input
+                      type="email"
+                      class="form-control"
+                      placeholder="Email Address"
+                      id="exampleInputEmail1"
+                      aria-describedby="emailHelp"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="mb-3">
+                    <textarea
+                      class="form-control"
+                      placeholder="Your Message"
+                      id="floatingTextarea"
+                    ></textarea>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="mb-3 text-center">
+                    <a href="#" class="btn-contact">Send Message</a>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+
+          <div class="col-lg-6 col-md-12">
+            <div class="content-contact">
+              <h2 class="heading-content">More About <span>Rockerz</span></h2>
+              <p class="para-content">
+                At Rockerz,  we're passionate about delivering exceptional audio experiences. Our headphones and earphones are crafted with precision, ensuring that every note and beat is heard with crystal-clear clarity. Whether you're a music lover, a gamer, or someone who simply enjoys high-quality sound, Rocerz has the perfect audio solution for you.
+              </p>
+              <p class="para-content">
+                Join the Rockerz community and discover why our customers rave about the unparalleled sound quality, comfort, and style of our products. Elevate your audio experience with Rocerz—where every sound tells a story.
+              </p>
+            </div>
           </div>
         </div>
       </div>
