--- a/index.html
+++ b/index.html
@@ -615,6 +615,10 @@
         </div>
       </div>
     </section>
+
+    <footer>
+      <p class="para-footer">Rockerz Website &#169 2024. All Rights Reserved</p>
+    </footer>
     <!-- scripts -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
